--- a/package.json
+++ b/package.json
@@ -26,15 +26,19 @@
         "@ionic-native/splash-screen": "3.7.0",
         "@ionic-native/status-bar": "3.7.0",
         "@ionic/storage": "2.0.1",
+        "angular": "^1.6.4",
+        "angularfire": "^2.3.0",
+        "angularfire2": "^4.0.0-rc.1",
         "cordova-android": "^6.2.3",
         "cordova-plugin-compat": "^1.1.0",
-        "cordova-plugin-console": "^1.0.5",
-        "cordova-plugin-device": "^1.1.4",
+        "cordova-plugin-console": "^1.0.7",
+        "cordova-plugin-device": "^1.1.6",
         "cordova-plugin-geolocation": "^2.4.3",
         "cordova-plugin-mauron85-background-geolocation": "^2.2.5",
         "cordova-plugin-splashscreen": "^4.0.3",
-        "cordova-plugin-statusbar": "^2.2.2",
-        "cordova-plugin-whitelist": "^1.3.1",
+        "cordova-plugin-statusbar": "^2.2.3",
+        "cordova-plugin-whitelist": "^1.3.2",
+        "firebase": "^4.0.0",
         "geolocation": "^0.2.0",
         "ionic-angular": "3.2.1",
         "ionic-plugin-keyboard": "^2.2.1",
@@ -44,15 +48,19 @@
         "zone.js": "0.8.10"
     },
     "devDependencies": {
+        "@angular/cli": "^1.1.0",
         "@ionic/app-scripts": "1.3.7",
-        "@ionic/cli-plugin-cordova": "1.0.0",
-        "@ionic/cli-plugin-ionic-angular": "1.0.0",
+        "@ionic/cli-plugin-cordova": "1.4.0",
+        "@ionic/cli-plugin-ionic-angular": "1.3.1",
         "typescript": "2.2.1"
     },
     "description": "An Ionic project",
     "cordova": {
         "plugins": {
-            "cordova-plugin-mauron85-background-geolocation": {},
+            "cordova-plugin-mauron85-background-geolocation": {
+                "ACCOUNT_TYPE": "$PACKAGE_NAME.account",
+                "CONTENT_AUTHORITY": "$PACKAGE_NAME"
+            },
             "cordova-plugin-geolocation": {},
             "cordova-plugin-console": {},
             "cordova-plugin-device": {},
