--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "@ionic-native/geolocation": "^3.8.0",
         "@ionic-native/splash-screen": "3.7.0",
         "@ionic-native/status-bar": "3.7.0",
+        "@ionic/cloud-angular": "^0.12.0",
         "@ionic/storage": "2.0.1",
         "angular": "^1.6.4",
         "angularfire": "^2.3.0",
@@ -33,16 +34,18 @@
         "cordova-plugin-compat": "^1.1.0",
         "cordova-plugin-console": "^1.0.7",
         "cordova-plugin-device": "^1.1.6",
+        "cordova-plugin-firebase": "^0.1.20",
         "cordova-plugin-geolocation": "^2.4.3",
         "cordova-plugin-mauron85-background-geolocation": "^2.2.5",
         "cordova-plugin-splashscreen": "^4.0.3",
         "cordova-plugin-statusbar": "^2.2.3",
         "cordova-plugin-whitelist": "^1.3.2",
-        "firebase": "^4.0.0",
+        "firebase": "^4.1.3",
         "geolocation": "^0.2.0",
         "ionic-angular": "3.2.1",
         "ionic-plugin-keyboard": "^2.2.1",
         "ionicons": "3.0.0",
+        "phonegap-plugin-push": "^1.10.5",
         "rxjs": "5.1.1",
         "sw-toolbox": "3.6.0",
         "zone.js": "0.8.10"
@@ -50,7 +53,7 @@
     "devDependencies": {
         "@angular/cli": "^1.1.0",
         "@ionic/app-scripts": "1.3.7",
-        "@ionic/cli-plugin-cordova": "1.4.0",
+        "@ionic/cli-plugin-cordova": "^1.4.1",
         "@ionic/cli-plugin-ionic-angular": "1.3.1",
         "typescript": "2.2.1"
     },
@@ -67,7 +70,11 @@
             "cordova-plugin-splashscreen": {},
             "cordova-plugin-statusbar": {},
             "cordova-plugin-whitelist": {},
-            "ionic-plugin-keyboard": {}
+            "ionic-plugin-keyboard": {},
+            "cordova-plugin-firebase": {},
+            "phonegap-plugin-push": {
+                "SENDER_ID": "799447247436"
+            }
         },
         "platforms": [
             "android"
